plugins/kotlin/idea/tests/testData/multiplatform/diamondSeesTwoActuals/top/top.kt
package sample

expect class <!LINE_MARKER("descr='Has actuals in [left, right] modules'; targets=[(text=left; icon=nodes/Module.svg); (text=right; icon=nodes/Module.svg)]")!>A<!> {
    fun <!LINE_MARKER("descr='Has actuals in [left, right] modules'; targets=[(text=left; icon=nodes/Module.svg); (text=right; icon=nodes/Module.svg)]")!>foo<!>(): Int
}
